# era-zkevm_opcode_defs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  deny.toml
src/: circuit_prices.rs  imm_mem_modifiers.rs  lib.rs  opcode.rs  system_params.rs  utils.rs
src/circuit_pricing_generator/: main.rs
src/decoding/: encoding_mode_production.rs  encoding_mode_testing.rs  mod.rs
src/definitions/: add.rs  all.rs  binop.rs  condition.rs  context.rs  div.rs  far_call.rs  invalid_opcode.rs  jump.rs  log.rs  mod.rs  mul.rs  near_call.rs  noop.rs  opcode_trait.rs  ptr.rs  ret.rs  shift.rs  sub.rs  uma.rs
src/definitions/abi/: far_call.rs  fat_pointer.rs  meta.rs  mod.rs  near_call.rs  precompile_call.rs  ret.rs
src/definitions/versioned_hash/: mod.rs
