[package]
name = "zkevm_opcode_defs"
version = "1.3.2"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "circuit_pricing_generator"
path = "src/circuit_pricing_generator/main.rs"

[dependencies]
bitflags = "2"
lazy_static = "1.4"
ethereum-types = "=0.14.1"
sha2 = { git = "https://github.com/RustCrypto/hashes.git", tag = "sha2-v0.10.6" }
sha3 = { git = "https://github.com/RustCrypto/hashes.git", tag = "sha3-v0.10.6" }
blake2 = { git = "https://github.com/RustCrypto/hashes.git", tag = "blake2-v0.10.6" }
k256 = { version = "=0.11.6", features = ["arithmetic", "ecdsa"] }
