[package]
name = "zkevm_opcode_defs"
version = "1.3.2"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "circuit_pricing_generator"
path = "src/circuit_pricing_generator/main.rs"

[dependencies]
bitflags = "2"
lazy_static = "1.4"
ethereum-types = "=0.14.1"
sha2 = { git = "https://github.com/RustCrypto/hashes.git", rev = "1731ced4a116d61ba9dc6ee6d0f38fb8102e357a" }
sha3 = { git = "https://github.com/RustCrypto/hashes.git", rev = "7a187e934c1f6c68e4b4e5cf37541b7a0d64d303" }
blake2 = { git = "https://github.com/RustCrypto/hashes.git", rev = "1f727ce37ff40fa0cce84eb8543a45bdd3ca4a4e" }
k256 = { version = "0.11.6", features = ["arithmetic", "ecdsa"] }
