[package]
name = "zkevm_opcode_defs"
version = "1.5.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "circuit_pricing_generator"
path = "src/circuit_pricing_generator/main.rs"

[dependencies]
bitflags = "2"
lazy_static = "1.4"
ethereum-types = "=0.14.1"
sha2 = "=0.10.8"
sha3 = "=0.10.8"
blake2 = "0.10.*"
k256 = { version = "0.13.*", features = ["arithmetic", "ecdsa"] }
p256 = { version = "0.13.*", features = ["arithmetic", "ecdsa"] }
